2005-11-05  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-prompt.c:
    * daemon/seahorse-daemon.c:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-passphrase.c:
    * libseahorse/seahorse-passphrase.glade: (removed)
    * libseahorse/seahorse-secure-entry.c:
    * src/main.c: Unify passphrase prompting across all
    the seahorse processes.
    * configure.in:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-gtkstock.c:
    * libseahorse/seahorse-gtkstock.h:
    * libseahorse/seahorse-passphrase.c:
    * libseahorse/seahorse-ssh-askpass.c: (added)
    * libseahorse/seahorse-ssh-source.c:
    * libseahorse/seahorse-ssh-source.h:
    * pixmaps/Makefile.am:
    * pixmaps/seahorse-key-ssh-large.png: (added)
    * pixmaps/seahorse-parts.xcf: (added)
    * src/Makefile.am:
    * src/seahorse-key-dialogs.h:
    * src/seahorse-key-manager.c:
    * src/seahorse-ssh-upload.c:
    * src/seahorse-ssh-upload.glade: Added support for uploading SSH
    public keys to another machine.
    
2005-11-04  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/Makefile.am:
    * agent/gtk-secure-entry.c: (removed)
    * agent/gtk-secure-entry.h: (removed)
    * agent/seahorse-agent-cache.c:
    * agent/seahorse-agent-prompt.c:
    * agent/seahorse-agent-status.c:
    * agent/seahorse-agent-secmem.c: (removed)
    * agent/seahorse-agent-secmem.h: (removed)
    * daemon/seahorse-daemon.c:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-secure-entry.c: (added)
    * libseahorse/seahorse-secure-entry.h: (added)
    * libseahorse/seahorse-secure-memory.c: (added)
    * libseahorse/seahorse-secure-memary.h: (added)
    * po/POTFILES.in: Cleaned up secure memory code and moved
    it into libseahorse
    
2005-10-30  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-key-source.h: