@@ -284,6 +284,7 @@
 					  <property name="can_focus">True</property>
 					  <property name="relief">GTK_RELIEF_NORMAL</property>
 					  <property name="focus_on_click">True</property>
+					  <signal name="clicked" handler="on_owner_photo_first_button_clicked" last_modification_time="Fri, 14 Oct 2005 23:27:05 GMT"/>
 
 					  <child>
 					    <widget class="GtkImage" id="image26">
@@ -400,6 +401,33 @@
 						  </child>
 						</widget>
 					      </child>
+					    </widget>
+					  </child>
+					</widget>
+					<packing>
+					  <property name="padding">0</property>
+					  <property name="expand">False</property>
+					  <property name="fill">False</property>
+					</packing>
+				      </child>
+
+				      <child>
+					<widget class="GtkButton" id="owner-photo-last-button">
+					  <property name="visible">True</property>
+					  <property name="can_focus">True</property>
+					  <property name="relief">GTK_RELIEF_NORMAL</property>
+					  <property name="focus_on_click">True</property>
+					  <signal name="clicked" handler="on_owner_photo_last_button_clicked" last_modification_time="Sat, 15 Oct 2005 23:59:25 GMT"/>
+
+					  <child>
+					    <widget class="GtkImage" id="image28">
+					      <property name="visible">True</property>
+					      <property name="stock">gtk-goto-last</property>
+					      <property name="icon_size">4</property>
+					      <property name="xalign">0.5</property>
+					      <property name="yalign">0.5</property>
+					      <property name="xpad">0</property>
+					      <property name="ypad">0</property>
 					    </widget>
 					  </child>
 					</widget>
