@@ -1,3 +1,8 @@
+2005-11-07  Adam Schreiber <sadam@clemson.edu>
+    * src/seahorse-key-properties.c:
+    * src/seahorse-key-properties.glade: Patch for primary and first
+    and last buttons (Bug #317537)
+
 2005-11-05  Nate Nielsen  <nielsen@memberwebs.com>
 
     * agent/seahorse-agent-prompt.c:
